--- a/ansible/playbook-bootstrap-gitops.yml
+++ b/ansible/playbook-bootstrap-gitops.yml
@@ -6,9 +6,9 @@
   connection: local
   gather_facts: false
   roles:
-#    - crc-setup
-#   - deploy-operator-gitea
-#    - deploy-operator-gitops
-    - deploy-resources-gitops
-#    - argocd-client-install
-#    - crc-credentials
+   - crc-setup
+   - deploy-operator-gitea
+   - deploy-operator-gitops
+   - deploy-resources-gitops
+   - argocd-client-install
+   - crc-credentials
