--- a/ansible/roles/deploy-operator-gitops/tasks/main.yml
+++ b/ansible/roles/deploy-operator-gitops/tasks/main.yml
@@ -66,7 +66,7 @@
             - '*'
           resources:
             - '*'
-          verbs: ['get', 'list', 'watch', 'create']
+          verbs: ['get', 'list', 'watch', 'create', 'update', 'patch', 'delete']
   tags: [always, argocd]
 
 - name: Create role binding
