--- a/argocd-manifests/managed-app-bgd.yml
+++ b/argocd-manifests/managed-app-bgd.yml
@@ -10,7 +10,8 @@ spec:
   project: default 
   source: 
     path: cluster-projects/bgd/overlays/bgd
-    repoURL: https://gitops-gitea-cicd-tools.apps-crc.testing/gitopsmgr/openshift-gitops-ops.git
+    #repoURL: https://gitops-gitea-cicd-tools.apps-crc.testing/gitopsmgr/openshift-gitops-ops.git
+    repoURL: https://github.com/chrismulderza/openshift-gitops-ops-demo.git
     targetRevision: main
   syncPolicy: 
     automated:
